--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuetify": "^2.5.8",
-    "webpack": "4.15.*",
+    "webpack": "^5.51.1",
     "webpack-dev-middleware": "3.7.x"
   },
   "devDependencies": {
